--- a/vignettes/introduction.Rmd
+++ b/vignettes/introduction.Rmd
@@ -37,7 +37,7 @@ The development of `HARplus` builds upon the foundational work of the `HARr` pac
 
 # GTAPViz: An Extension of HARplus for Visualization
 
-I have developed another package specifically for visualization, particularly for GTAP users: **[GTAPViz](https://bodysbobb.github.io/GTAPViz/)**
+I have developed another package specifically for visualization, particularly for GTAP users: **[GTAPViz](https://www.pattawee-pp.com/GTAPViz/)**
 
 ---
 
